[gd_scene load_steps=6 format=2]

[ext_resource path="res://setting_menu/img/exitHover.png" type="Texture" id=1]
[ext_resource path="res://setting_menu/img/exit.png" type="Texture" id=2]
[ext_resource path="res://setting_menu/sound/test_effect.wav" type="AudioStream" id=3]
[ext_resource path="res://setting_menu/Setting_menu.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[node name="setting_menu" type="PopupDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/panel = SubResource( 1 )
popup_exclusive = true
script = ExtResource( 4 )

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_top = 10.0
margin_bottom = 28.0
custom_colors/font_color = Color( 1, 0.866667, 0.615686, 1 )
text = "Options"
align = 1
valign = 1

[node name="grid_container" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -134.5
margin_top = -54.0
margin_right = 134.5
margin_bottom = 54.0
custom_constants/vseparation = 0
columns = 2

[node name="Label" type="Label" parent="grid_container"]
margin_top = 3.0
margin_right = 150.0
margin_bottom = 21.0
rect_min_size = Vector2( 150, 0 )
text = "Window Size"

[node name="WindowSizeOptionButton" type="OptionButton" parent="grid_container"]
unique_name_in_owner = true
margin_left = 154.0
margin_right = 269.0
margin_bottom = 24.0
focus_neighbour_top = NodePath("../../../../../../../exitButton")
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
keep_pressed_outside = true
text = "640×360 (1:1)"
items = [ "640×360 (1:1)", null, false, 0, null, "640×480 (4:3)", null, false, 1, null, "720×480 (3:2)", null, false, 2, null, "800×600 (4:3)", null, false, 3, null, "1152×648 (16:9)", null, false, 5, null, "1280×720 (16:9)", null, false, 6, null, "1280×800 (16:10)", null, false, 6, null, "1680×720 (21:9)", null, false, 7, null, "Custom", null, true, 8, null ]
selected = 0

[node name="Label2" type="Label" parent="grid_container"]
margin_top = 28.0
margin_right = 150.0
margin_bottom = 46.0
rect_min_size = Vector2( 150, 0 )
text = "Window Fullscreen"

[node name="WindowFullscreenCheckBox" type="CheckBox" parent="grid_container"]
unique_name_in_owner = true
margin_left = 154.0
margin_top = 24.0
margin_right = 269.0
margin_bottom = 50.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
keep_pressed_outside = true

[node name="HSeparator" type="HSeparator" parent="grid_container"]
margin_top = 50.0
margin_right = 150.0
margin_bottom = 54.0

[node name="HSeparator2" type="HSeparator" parent="grid_container"]
margin_left = 154.0
margin_top = 50.0
margin_right = 269.0
margin_bottom = 54.0

[node name="Label3" type="Label" parent="grid_container"]
margin_top = 54.0
margin_right = 150.0
margin_bottom = 72.0
rect_min_size = Vector2( 150, 0 )
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="grid_container"]
unique_name_in_owner = true
margin_left = 154.0
margin_top = 54.0
margin_right = 269.0
margin_bottom = 70.0
mouse_default_cursor_shape = 10
size_flags_horizontal = 3
size_flags_stretch_ratio = 100.0
value = 100.0
rounded = true

[node name="MusicVolumeValue" type="Label" parent="grid_container/MusicVolumeSlider"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -12.0
margin_top = -20.0
margin_right = 12.0
rect_min_size = Vector2( 24, 20 )
size_flags_horizontal = 3
text = "100"

[node name="Label4" type="Label" parent="grid_container"]
margin_top = 72.0
margin_right = 150.0
margin_bottom = 90.0
rect_min_size = Vector2( 150, 0 )
text = "Effect Volume"

[node name="EffectVolumeSlider" type="HSlider" parent="grid_container"]
unique_name_in_owner = true
margin_left = 154.0
margin_top = 72.0
margin_right = 269.0
margin_bottom = 88.0
mouse_default_cursor_shape = 10
size_flags_horizontal = 3
size_flags_stretch_ratio = 100.0
value = 100.0
rounded = true

[node name="EffectVolumeValue" type="Label" parent="grid_container/EffectVolumeSlider"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -10.0
margin_right = 12.0
margin_bottom = 10.0
rect_min_size = Vector2( 24, 20 )
size_flags_horizontal = 3
text = "100"

[node name="test_effect" type="AudioStreamPlayer" parent="grid_container/EffectVolumeSlider"]
unique_name_in_owner = true
stream = ExtResource( 3 )

[node name="Label5" type="Label" parent="grid_container"]
margin_top = 90.0
margin_right = 150.0
margin_bottom = 108.0
rect_min_size = Vector2( 150, 0 )
text = "Dialog Volume"

[node name="DialogVolumeSlider" type="HSlider" parent="grid_container"]
unique_name_in_owner = true
margin_left = 154.0
margin_top = 90.0
margin_right = 269.0
margin_bottom = 106.0
mouse_default_cursor_shape = 10
size_flags_horizontal = 3
size_flags_stretch_ratio = 100.0
value = 100.0
rounded = true

[node name="DialogVolumeValue" type="Label" parent="grid_container/DialogVolumeSlider"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -10.0
margin_right = 12.0
margin_bottom = 10.0
rect_min_size = Vector2( 24, 20 )
size_flags_horizontal = 3
text = "100"

[node name="test_dialog" type="AudioStreamPlayer" parent="grid_container/DialogVolumeSlider"]
unique_name_in_owner = true
stream = ExtResource( 3 )

[node name="exitButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -27.0
margin_top = 10.0
margin_right = -11.0
margin_bottom = 26.0
rect_min_size = Vector2( 16, 16 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 1 )
expand = true
stretch_mode = 5

[connection signal="item_selected" from="grid_container/WindowSizeOptionButton" to="." method="_on_window_base_size_item_selected"]
[connection signal="toggled" from="grid_container/WindowFullscreenCheckBox" to="." method="_on_checkBox_toggled"]
[connection signal="value_changed" from="grid_container/MusicVolumeSlider" to="." method="_on_HSlider_music_value_changed"]
[connection signal="value_changed" from="grid_container/EffectVolumeSlider" to="." method="_on_HSlider_efftect_value_changed"]
[connection signal="value_changed" from="grid_container/DialogVolumeSlider" to="." method="_on_HSlider_dialog_value_changed"]
[connection signal="pressed" from="exitButton" to="." method="_on_exitButton_pressed"]
